// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePickerField snapshots tests renders component 1`] = `
<Component
  allowKeyboardControl={true}
  autoOk={true}
  error={true}
  format="DD/MM/YYYY"
  helperText="error text"
  input={
    Object {
      "onChange": [MockFunction],
      "value": 0,
    }
  }
  keyboard={true}
  keyboardIcon={<Memo(EventIcon) />}
  leftArrowIcon={<Memo(KeyboardArrowLeftIcon) />}
  meta={
    Object {
      "error": "error text",
    }
  }
  onChange={[MockFunction]}
  rightArrowIcon={<Memo(KeyboardArrowRightIcon) />}
  value={null}
/>
`;

exports[`DatePickerField snapshots tests renders onchange when input not supplied 1`] = `
<Component
  allowKeyboardControl={true}
  autoOk={true}
  error={false}
  format="DD/MM/YYYY"
  helperText=""
  keyboard={true}
  keyboardIcon={<Memo(EventIcon) />}
  leftArrowIcon={<Memo(KeyboardArrowLeftIcon) />}
  onChange={[MockFunction]}
  rightArrowIcon={<Memo(KeyboardArrowRightIcon) />}
  value={null}
/>
`;
